fix icon color on ios

--- a/apps/app-website/src/scss/startbootstrap-new-age/_global.scss
+++ b/apps/app-website/src/scss/startbootstrap-new-age/_global.scss
@@ -29,7 +29,7 @@ html {
     background: -webkit-linear-gradient(#{$primary}, #{$secondary});
     background-clip: text;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    -webkit-text-fill-color: #{$primary};
 }
 
 // Padding for sections
